fixed the banner width and fixed the buttons and the canvas is behind the header now

--- a/css/media.css
+++ b/css/media.css
@@ -137,11 +137,14 @@ header {
 }
 
 .banner {
+  width: 100%;
   top: 0;
   position: relative;
   height: 70vh;
   overflow: hidden;
   background: linear-gradient(135deg, #111827, #131a27);
+  display: flex;
+  flex-direction: column;
 }
 
 .wave-canvas {
@@ -219,10 +222,18 @@ header {
   width: 100vw;
   height: 15vh;
 }
+
 .hero-section {
   position: relative;
   width: 100vw;
   height: 70vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.hero-content-parent {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -231,15 +242,13 @@ header {
 }
 
 @media (max-width: 768px) {
-  .hero-section {
+  .hero-content-parent {
     flex-direction: column-reverse; /* Switch to column for smaller screens */
   }
 }
 
 .social-container {
-  position: absolute;
-  top: 55vh;
-  width: 100vw;
+  position: relative;
   padding: 20px;
   text-align: center;
   z-index: 4;
